Included glfw, glm and DirectX

--- a/DX12Renderer/CMakeLists.txt
+++ b/DX12Renderer/CMakeLists.txt
@@ -8,4 +8,5 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 cmake_policy(SET CMP0079 NEW)
 
-add_subdirectory(Project)
+add_subdirectory(src)
+add_subdirectory(Resources)
