Set up Helpers.h

--- a/DX12Renderer/src/CMakeLists.txt
+++ b/DX12Renderer/src/CMakeLists.txt
@@ -3,4 +3,4 @@ project(DX12Renderer)
 
 add_executable(DXRenderer
 "main.cpp"
-"Includes/DirectXIncludes.h")
+"Includes/DirectXIncludes.h" "Helpers/Helpers.h")
