--- a/DX12Renderer/src/CMakeLists.txt
+++ b/DX12Renderer/src/CMakeLists.txt
@@ -1,6 +1,12 @@
 project(DX12Renderer)
 
+set(SRC_FILES
+"main.cpp"
+)
 
 add_executable(DXRenderer
-"main.cpp"
-"Includes/DirectXIncludes.h" "Helpers/Helpers.h")
+${SRC_FILES}
+)
+
+
+target_link_libraries(DXRenderer PRIVATE user32.lib kernel32.lib)
