--- a/DX12Renderer/3rdParty/DirectX/CMakeLists.txt
+++ b/DX12Renderer/3rdParty/DirectX/CMakeLists.txt
@@ -5,17 +5,9 @@ target_link_libraries(DXRenderer PRIVATE
     dxguid.lib
 )
 
-#include(FetchContent)
-#
-## DX12 extension library
-#FetchContent_Declare(
-#	DirectX-Headers
-#	GIT_REPOSITORY	https://github.com/microsoft/DirectX-Headers
-#	GIT_TAG 	v1.614.1
-#	GIT_SHALLOW true
-#)
-#
-#FetchContent_MakeAvailable(DirectX-Headers) 
-#
-#
-#target_link_libraries(DXRenderer PRIVATE DirectX-Headers)
+
+add_library(directXHelpers INTERFACE)
+
+target_include_directories(directXHelpers INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/include)
+
+target_link_libraries(DXRenderer PRIVATE directXHelpers)
