--- a/DX12Renderer/CMakeLists.txt
+++ b/DX12Renderer/CMakeLists.txt
@@ -8,7 +8,7 @@ project(DX12Renderer)
 
 # Specify the C++ standard
 set(CMAKE_CXX_STANDARD 20)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_STANDARD_REQUIRED True)
 set(CMAKE_WIN32_EXECUTABLE TRUE)
 
 # Handle CMake policies for better compatibility
