Created events and keycodes files

--- a/DX12Renderer/src/CMakeLists.txt
+++ b/DX12Renderer/src/CMakeLists.txt
@@ -5,7 +5,8 @@ set(SRC_FILES
 	"Window.cpp"
 	"Application.cpp"
 	"FenceObject.cpp"
- "CommandQueue.cpp")
+ "CommandQueue.cpp"
+)
 
 add_executable(DXRenderer ${SRC_FILES})
 
