Set up event propagation to game class and set up TestGame1 class

--- a/DX12Renderer/src/CMakeLists.txt
+++ b/DX12Renderer/src/CMakeLists.txt
@@ -1,12 +1,12 @@
 project(DX12Renderer)
 
 set(SRC_FILES
-	"main.cpp"
-	"Window.cpp"
-	"Application.cpp"
-	
- "CommandQueue.cpp"
- "Game.cpp")
+"main.cpp"
+"Window.cpp"
+"Application.cpp"
+"CommandQueue.cpp"
+"Game.cpp"
+"Games/TestGame1.cpp")
 
 add_executable(DXRenderer ${SRC_FILES})
 
