Shaders are now compiled when building

--- a/DX12Renderer/CMakeLists.txt
+++ b/DX12Renderer/CMakeLists.txt
@@ -11,12 +11,15 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 set(CMAKE_WIN32_EXECUTABLE TRUE)
 
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib) # Output directory for static lib (.LIB)
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin) # Output directory for shared lib (.DLL)
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin) # Output directory for executables (.EXE)
+
 # Handle CMake policies for better compatibility
 cmake_policy(SET CMP0079 NEW)
 
 # Include directories (optional but helpful for include paths)
 include_directories(${CMAKE_SOURCE_DIR}/include)
-
 # Add subdirectories for source, resources, and third-party dependencies
 add_subdirectory(src)
 add_subdirectory(Resources)
