Split project into DX12Lib library and an executable

--- a/DX12Renderer/3rdParty/DirectX/CMakeLists.txt
+++ b/DX12Renderer/3rdParty/DirectX/CMakeLists.txt
@@ -1,5 +1,5 @@
 # DX12 libraries
-target_link_libraries(DXRenderer PRIVATE
+target_link_libraries(DX12Lib PUBLIC
     d3d12.lib
     dxgi.lib
     dxguid.lib
@@ -11,4 +11,4 @@ add_library(directXHelpers INTERFACE)
 
 target_include_directories(directXHelpers INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/include)
 
-target_link_libraries(DXRenderer PRIVATE directXHelpers)
+target_link_libraries(DX12Lib PUBLIC directXHelpers)
