--- a/DX12Renderer/3rdParty/Glm/CMakeLists.txt
+++ b/DX12Renderer/3rdParty/Glm/CMakeLists.txt
@@ -10,4 +10,4 @@ FetchContent_Declare(
 FetchContent_MakeAvailable(glm)
 
 
-target_link_libraries(DXRenderer PRIVATE glm::glm)
+target_link_libraries(DX12Lib PRIVATE glm::glm)
