Set up Mesh class

--- a/DX12Renderer/DX12Lib/CMakeLists.txt
+++ b/DX12Renderer/DX12Lib/CMakeLists.txt
@@ -16,7 +16,18 @@ set(INC_FILES
     "src/Helpers/Helpers.h"
     "src/Includes/DirectXIncludes.h"
  "src/Application/CommandList.h"
- "src/Application/DescriptorAllocator/DescriptorAllocator.h" "src/Application/DescriptorAllocator/DescriptorAllocatorPage.h" "src/Application/DescriptorAllocator/DescriptorAllocation.h" "src/Application/Resources/Resource.h" "src/Application/DynamicDescriptorHeap.h" "src/Application/RootSignature.h" "src/Application/Resources/ResourceStateTracker.h")
+ "src/Application/DescriptorAllocator/DescriptorAllocator.h"
+ "src/Application/DescriptorAllocator/DescriptorAllocatorPage.h"
+ "src/Application/DescriptorAllocator/DescriptorAllocation.h"
+ "src/Application/Resources/Resource.h"
+ "src/Application/DynamicDescriptorHeap.h"
+ "src/Application/RootSignature.h"
+ "src/Application/Resources/ResourceStateTracker.h"
+ "src/Application/DataTypes/Mesh.h"
+ "src/Includes/GlmIncludes.h"
+ "src/Application/DataTypes/Structs.h"
+ "src/Application/Buffers/Buffer.h"
+ "src/Application/Buffers/IndexBuffer.h" "src/Application/Buffers/VertexBuffer.h")
 
 set(SRC_FILES
 "src/Application/Window.cpp"
@@ -28,7 +39,16 @@ set(SRC_FILES
 "src/Application/HighResClock.cpp"
 "src/Application/UploadBuffer.cpp"
 "src/Application/CommandList.cpp"
- "src/Application/DescriptorAllocator/DescriptorAllocator.cpp" "src/Application/DescriptorAllocator/DescriptorAllocatorPage.cpp" "src/Application/DescriptorAllocator/DescriptorAllocation.cpp" "src/Application/Resources/Resource.cpp" "src/Application/DynamicDescriptorHeap.cpp" "src/Application/RootSignature.cpp" "src/Application/Resources/ResourceStateTracker.cpp") 
+ "src/Application/DescriptorAllocator/DescriptorAllocator.cpp"
+ "src/Application/DescriptorAllocator/DescriptorAllocatorPage.cpp"
+ "src/Application/DescriptorAllocator/DescriptorAllocation.cpp"
+ "src/Application/Resources/Resource.cpp"
+ "src/Application/DynamicDescriptorHeap.cpp"
+ "src/Application/RootSignature.cpp"
+ "src/Application/Resources/ResourceStateTracker.cpp"
+ "src/Application/DataTypes/Mesh.cpp"
+ "src/Application/Buffers/Buffer.cpp"
+ "src/Application/Buffers/IndexBuffer.cpp" "src/Application/Buffers/VertexBuffer.cpp") 
 
 
 add_library(DX12Lib ${SRC_FILES} ${INC_FILES})
