--- a/DX12Renderer/CMakeLists.txt
+++ b/DX12Renderer/CMakeLists.txt
@@ -22,5 +22,6 @@ cmake_policy(SET CMP0079 NEW)
 add_subdirectory(DX12Lib)
 add_subdirectory(Tutorial2)
 add_subdirectory(Tutorial3)
+add_subdirectory(RayTracer)
 add_subdirectory(Resources)
 add_subdirectory(3rdParty)
